--- a/index.html
+++ b/index.html
@@ -612,57 +612,58 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
         </div>
     </div>
     <!-- FAQ5 -->
-    <!-- FAQ6 -->
-    <div id="FAQ6:Plataforma-Integra-Energia-Beneficios" class="container content-lg">
-        <div class="row margin-b-20">
-            <div class="col-sm-12">
-                <h2>Plataforma Integra Energía - Beneficios</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm sm-margin-b-10 item-center">
-                <div class="col-sm-2 col-sm-offset-1">
-                    <img class="img-responsive" src="img/faq/6_Plataforma-Integra-Energia-Beneficios/acceso.png"
-                        alt="acceso">
+    <div id="benefitsIntegra" class="benefitsIntegra" data-auto-height="true">
+        <div class="content-lg container">
+            <div class="row margin-b-40">
+                <div class="col-sm-12">
+                    <h2>PLATAFORMA INTEGRA ENERGÍA</h2>
+                    <h2>BENEFICIOS</h2>
                 </div>
-                <h3>Acceso a todos los proveedores en forma directa y eficiente</h3>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm sm-margin-b-10 item-center">
-                <div class="col-sm-2 col-sm-offset-1">
-                    <img class="img-responsive"
-                        src="img/faq/6_Plataforma-Integra-Energia-Beneficios/publicacion.png" alt="publicacion">
+            <div class="row">
+                <div class="col-sm-4 col-12 benefitsIntegra-card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
+                    <div class="img-container">
+                        <img class="img-responsive img" src="img/faq/benefitsIntegra/acceso a los principales proveedores.png"
+                            alt="acceso">
+                        <!-- <img class="img-responsive img"
+                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion"> -->
+                    </div>
+                    <h3>Acceso a todos los proveedores en forma directa y eficiente</h3>
                 </div>
-                <h3>Publicación de pedidos y obtención de ofertas competitivas que mejorarán tus resultados.
-                </h3>
+                <div class="col-sm-4 col-12 benefitsIntegra-card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
+                    <div class="img-container">
+                        <img class="img-responsive img" src="img/faq/benefitsIntegra/acceso a los principales proveedores.png"
+                            alt="acceso">
+                        <!-- <img class="img-responsive img"
+                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion"> -->
+                    </div>
+                    <h3>Publicación de pedidos y obtención de ofertas competitivas que mejorarán tus resultados.</h3>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm sm-margin-b-10 item-center">
-                <div class="col-sm-2 col-sm-offset-1">
-                    <img class="img-responsive"
-                        src="img/faq/6_Plataforma-Integra-Energia-Beneficios/participacion.png" alt="participacion">
+            <div class="row">
+                <div class="col-sm-4 col-12 benefitsIntegra-card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
+                    <div class="img-container">
+                        <img class="img-responsive img" src="img/faq/benefitsIntegra/acceso a los principales proveedores.png"
+                            alt="acceso">
+                        <!-- <img class="img-responsive img"
+                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion"> -->
+                    </div>
+                    <h3>Participación de manera segura con nuestro sistema de encriptación de datos.</h3>
                 </div>
-                <h3>Participación de manera segura con nuestro sistema de encriptación de datos.</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm sm-margin-b-10 item-center">
-                <div class="col-sm-2 col-sm-offset-1">
-                    <img class="img-responsive" src="img/faq/6_Plataforma-Integra-Energia-Beneficios/obtencion.png"
-                        alt="obtencion">
+                <div class="col-sm-4 col-12 benefitsIntegra-card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
+                    <div class="img-container">
+                        <img class="img-responsive img" src="img/faq/benefitsIntegra/acceso a los principales proveedores.png"
+                            alt="acceso">
+                        <!-- <img class="img-responsive img"
+                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion"> -->
+                    </div>
+                    <h3>Obtención de resultados trazables y auditables.</h3>
                 </div>
-                <h3>Obtención de resultados trazables y auditables.</h3>
             </div>
         </div>
     </div>
-    <!-- End FAQ6 -->
-    <!-- FAQ7 -->
-    <!-- ***********COMPLETE********** -->
-    <!-- End FAQ7 -->
     <!-- FAQ8 -->
-    <div id="FAQ8:Plataforma-Integra-Energia-Como-funciona">
+    <div id="FAQ8:Plataforma-Integra-Energia-Como-funciona" class="bg-color-sky-light">
         <div class="content-lg container">
             <div class="row margin-b-20">
                 <div class="col-sm-12">
@@ -679,7 +680,7 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
     </div>
     <!-- End FAQ8 -->
     <!-- FAQ9 -->
-    <div id="requirementsIntegra" class="requirementsIntegra bg-color-sky-light">
+    <div id="requirementsIntegra" class="requirementsIntegra">
         <div class="container content-lg">
             <div class="row">
                 <div class="col-sm-12">
