--- a/index.html
+++ b/index.html
@@ -563,9 +563,6 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
             <div class="row margin-b-40 requirementsSGE-card">
                 <div class="col-sm-2 col-12  wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                    <!-- <img class="img-responsive img-center"
-                        src="img/faq/requirementsSGE/adjuntar facturas de suministro.png"
-                        alt="adjuntar facturas de suministro"> -->
                     <div class="img-container">
                         <img class="img-responsive img"
                             src="img/faq/requirementsSGE/completar datos de registro.png"
@@ -579,12 +576,9 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
             <div class="row margin-b-40 requirementsSGE-card">
                 <div class="col-sm-2 col-12  wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                    <!-- <img class="img-responsive img"
-                        src="img/faq/requirementsSGE/adjuntar facturas de suministro.png"
-                        alt="adjuntar facturas de suministro"> -->
                     <div class="img-container">
                         <img class="img-responsive img"
-                            src="img/faq/requirementsSGE/completar datos de registro.png"
+                            src="img/faq/requirementsSGE/adjuntar facturas de los suministros.png"
                             alt="completar-datos-de-registro">
                     </div>
                 </div>
@@ -595,13 +589,10 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
             <div class="row margin-b-40 requirementsSGE-card g-margin-b-30--xs g-margin-b-0--md">
                 <div class="col-sm-2 col-12  wow zoomIn animated" data-wow-duration=".3" data-wow-delay=".1s"
                     style="visibility: visible; animation-delay: 0.1s; animation-name: zoomIn;">
-                    <!-- <img class="img-responsive img"
-                        src="img/faq/requirementsSGE/solicitar medición.png"
-                        alt="solicitar medición"> -->
                     <div class="img-container">
                         <img class="img-responsive img"
-                            src="img/faq/requirementsSGE/completar datos de registro.png"
-                            alt="completar-datos-de-registro">
+                        src="img/faq/requirementsSGE/solicitar medición.png"
+                        alt="solicitar medición">
                     </div>
                 </div>
                 <div class="col-sm-5 col-12 text-left">
@@ -617,7 +608,7 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
             <div class="row margin-b-40">
                 <div class="col-sm-12">
                     <h2>PLATAFORMA INTEGRA ENERGÍA</h2>
-                    <h2>BENEFICIOS</h2>
+                    <h2>Beneficios</h2>
                 </div>
             </div>
             <div class="row">
@@ -625,17 +616,13 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
                     <div class="img-container">
                         <img class="img-responsive img" src="img/faq/benefitsIntegra/acceso a los principales proveedores.png"
                             alt="acceso">
-                        <!-- <img class="img-responsive img"
-                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion"> -->
                     </div>
                     <h3>Acceso a todos los proveedores en forma directa y eficiente</h3>
                 </div>
                 <div class="col-sm-4 col-12 benefitsIntegra-card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".2s">
                     <div class="img-container">
-                        <img class="img-responsive img" src="img/faq/benefitsIntegra/acceso a los principales proveedores.png"
-                            alt="acceso">
-                        <!-- <img class="img-responsive img"
-                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion"> -->
+                        <img class="img-responsive img"
+                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion">
                     </div>
                     <h3>Publicación de pedidos y obtención de ofertas competitivas que mejorarán tus resultados.</h3>
                 </div>
@@ -643,42 +630,80 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
             <div class="row">
                 <div class="col-sm-4 col-12 benefitsIntegra-card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
                     <div class="img-container">
-                        <img class="img-responsive img" src="img/faq/benefitsIntegra/acceso a los principales proveedores.png"
+                        <img class="img-responsive img" src="img/faq/benefitsIntegra/participación de manera segura.png"
                             alt="acceso">
-                        <!-- <img class="img-responsive img"
-                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion"> -->
                     </div>
                     <h3>Participación de manera segura con nuestro sistema de encriptación de datos.</h3>
                 </div>
                 <div class="col-sm-4 col-12 benefitsIntegra-card wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".1s">
                     <div class="img-container">
-                        <img class="img-responsive img" src="img/faq/benefitsIntegra/acceso a los principales proveedores.png"
+                        <img class="img-responsive img" src="img/faq/benefitsIntegra/obtención de resultados.png"
                             alt="acceso">
-                        <!-- <img class="img-responsive img"
-                            src="img/faq/benefitsIntegra/publicación de pedidos.png" alt="publicacion"> -->
                     </div>
                     <h3>Obtención de resultados trazables y auditables.</h3>
                 </div>
             </div>
         </div>
     </div>
-    <!-- FAQ8 -->
-    <div id="FAQ8:Plataforma-Integra-Energia-Como-funciona" class="bg-color-sky-light">
-        <div class="content-lg container">
-            <div class="row margin-b-20">
+    <!-- whatUsedfor - integra -->
+    <div id="whatUsedfor" class="what-used-for-integra bg-color-sky-light content-lg benefitsSGE" data-auto-height="true">
+        <div class="container">
+            <div class="row margin-b-40 wow fadeInLeft animated">
                 <div class="col-sm-12">
-                    <h2>Plataforma Gestión Energética - ¿Cómo funciona?</h2>
+                    <h2>PLATAFORMA INTEGRA ENERGÍA</h2>
+                    <h2>¿PARA QUÉ SE UTILIZA?</h2>
+                    </br>
+                    <p>Con ella podrás realizar licitaciones de insumos energéticos (sujeto a coordinación con Integra Energía).
+                            Productos disponibles
+                    </p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-10 col-sm-offset-1">
-                    <img class="img-responsive"
-                        src="img/faq/8_Plataforma-Integra-Energia-Como-Funciona/como-funciona.png" alt="como-funciona">
+            <div class="row row-space-2 margin-b-20 wow fadeInRight animated ">
+                <div class="col-md-4 col-xs-12 sm-margin-b-2">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".3s">
+                        <div class="what-used-for-integra-card" data-height="height">
+                            <div class="img-container">
+                                <img class="img img-responsive margin-r-20" src="img/FAQ/whatUsedforIntegra/subasta de GLP.png" alt="multi-plataforma">
+                            </div>
+                            <h3 class="card-info">Subasta anual de gas</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-xs-12 sm-margin-b-2">
+                    <div class="wow fadeInLeft " data-wow-duration=".3" data-wow-delay=".2s">
+                        <div class="what-used-for-integra-card" data-height="height">
+                            <div class="img-container">
+                                <img class="img img-responsive margin-r-20" src="img/FAQ/whatUsedforIntegra/subasta de Fuel Oil.png" alt="multi-plataforma">
+                            </div>
+                            <h3 class="card-info">Subasta de Fuel Oil</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-space-2 margin-b-20">
+                <div class="col-md-4 col-xs-12 sm-margin-b-2">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
+                        <div class="what-used-for-integra-card" data-height="height">
+                            <div class="img-container">
+                                <img class="img img-responsive margin-r-20" src="img/FAQ/whatUsedforIntegra/contrato de energía eléctrica.png" alt="multi-plataforma">
+                            </div>
+                            <h3 class="card-info"> Contratos de energía eléctrica</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-xs-12 sm-margin-b-2">
+                    <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".5s">
+                        <div class="what-used-for-integra-card" data-height="height">
+                            <div class="img-container">
+                                <img class="img img-responsive margin-r-20" src="img/FAQ/whatUsedforIntegra/subasta de GLP.png" alt="multi-plataforma">
+                            </div>
+                            <h3 class="card-info">Subasta de GLP</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- End FAQ8 -->
     <!-- FAQ9 -->
     <div id="requirementsIntegra" class="requirementsIntegra">
         <div class="container content-lg">
