how-worksIntegra img updated

--- a/index.html
+++ b/index.html
@@ -704,8 +704,27 @@ Desarrollo de ingeniería de proyectos y servicios customizables por el cliente 
             </div>
         </div>
     </div>
+    <div id="FAQ4:how-works">
+        <div class="how-works" data-auto-height="true">
+            <div class="content-lg container">
+                <div class="row margin-b-20">
+                    <div class="col-sm-12">
+                        <h2>PLATAFORMA INTEGRA ENERGÍA</h2>
+                        <h2>¿CÓMO FUNCIONA?</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <img class="img-responsive"
+                            src="img/faq/how-worksIntegra/como-funciona.png"
+                            alt="como-funciona">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- FAQ9 -->
-    <div id="requirementsIntegra" class="requirementsIntegra">
+    <div id="requirementsIntegra" class="requirementsIntegra bg-color-sky-light">
         <div class="container content-lg">
             <div class="row">
                 <div class="col-sm-12">
