whastapp href added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                     <div class="social-media">
                         <div class="social-media-wrap">
                             <img class="social-media-img" src="img/header/linkedln.svg" alt="Linkedin">
-                            <img class="social-media-img" src="img/header/whatsapp.svg" alt="Whatsapp">
+                            <a href="https://api.whatsapp.com/send?text=Quisiera%20contactarme%20con%20ustedes&phone=">
+                                <img class="social-media-img" src="img/header/whatsapp.svg" href="" alt="Whatsapp">
+                            </a>
                         </div>
                     </div>
                     <!-- End Logo -->
